# translation-tech-agent-gui

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  TOOLS.md  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: windows-build.yml
collaboration/: README.md
collaboration/groups/: README.md
collaboration/groups/A_image_translation/: README.md
collaboration/groups/B_terms_style/: README.md
collaboration/groups/C_text_audio_translation/: README.md
collaboration/integration/: README.md
collaboration/integration/adapters/: README.md
collaboration/integration/final_outputs/: INTEGRATION_ACCEPTANCE_20260718.md
collaboration/integration/manifests/: group_deliveries.md
collaboration/shared/: README.md
collaboration/shared/corpus/: README.md  official_culture_terms_20260718.csv  official_culture_terms_20260718.json  (+1 more)
docs/architecture/: AGENT_ARCHITECTURE.md  README.md  WORKFLOW_ARCHITECTURE.md
docs/releases/: v1.0.0.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.4.0.md
scripts/: build_demo_narration.ps1  build_exe.ps1  build_unified_delivery.py  capture_ui.py  generate_brand_assets.py  package_release.py  record_demo_tour.py  record_demo_video.ps1  run_dev.ps1  setup_env.ps1  verify_build.ps1  verify_delivery.py  verify_web_demo.cjs
src/agent_gui_starter/: agent.py  app.py  config.py  coze.py  integration.py  production.py  workflow.py
submissions/: README.md
tests/: test_coze.py  test_integration.py  test_model_api.py  test_production.py  test_ui.py
web/: README.md  app.js  index.html  styles.css  vercel.json
(+176 files in other folders)
