[project]
name = "agent-gui-starter"
version = "0.6.0"
description = "Modern Qt workbench for multimodal Chinese culture translation workflows."
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7,<7",
  "openai>=1.40,<3",
  "python-dotenv>=1.0,<2",
  "pydantic>=2.7,<3",
  "openpyxl>=3.1,<4",
]

[tool.pyinstaller]
name = "CultureTranslationWorkbench"
