[project]
name = "agent-gui-starter"
version = "1.4.0"
description = "Multimodal Chinese culture translation workbench with explainable multi-model workflows."
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7,<7",
  "openai>=1.40,<3",
  "python-dotenv>=1.0,<2",
  "pydantic>=2.7,<3",
  "openpyxl>=3.1,<4",
  "python-docx>=1.1,<2",
  "qrcode[pil]>=7.4,<9",
]

[project.optional-dependencies]
test = ["pytest>=9,<10"]

[tool.pyinstaller]
name = "Yishu"
